--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,37 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+     --foreground-rgb: 0, 0, 0;
+     --background-start-rgb: 214, 219, 220;
+     --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+     :root {
+          --foreground-rgb: 255, 255, 255;
+          --background-start-rgb: 0, 0, 0;
+          --background-end-rgb: 0, 0, 0;
+     }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+     color: rgb(var(--foreground-rgb));
+     background: linear-gradient(
+               to bottom,
+               transparent,
+               rgb(var(--background-end-rgb))
+          )
+          rgb(var(--background-start-rgb));
+}
+
+@layer components {
+     input[type="range"]::-webkit-slider-thumb {
+          width: 12px;
+          height: 12px;
+          border: 1px solid #000000;
+          border-radius: 3px;
+          cursor: pointer;
+          background: white;
+          -webkit-appearance: none;
+     }
 }
